[package]

name = "img_dup"
version = "1.0.0"
authors = [ "Austin Bonander <austin.bonander@gmail.com>" ]

[dependencies]
clap = "*"
time = "*"

[dependencies.img_hash]
git = "https://github.com/cybergeek94/img-hash"

[features]
gui = ["file_dialog", "pistoncore-sdl2_window", "conrod"]

[dependencies.file_dialog]
git = "https://github.com/cybergeek94/file_dialog"
optional = true

[dependencies.conrod]
git = "https://github.com/PistonDevelopers/conrod"
optional = true

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/PistonDevelopers/sdl2_window"
optional = true
